--- a/templates/Base_All.html
+++ b/templates/Base_All.html
@@ -87,7 +87,7 @@
         body {
             width: 100%;
             height: 100%;
-            background-image: url('{% static 'pictures/brich and blue.jpg' %}');
+            background-image: url('{% static 'pictures/brick and white.jpg' %}');
             background-size: cover;
             background-attachment: fixed;
             margin: 0;
