--- a/templates/wallOf/advice.html
+++ b/templates/wallOf/advice.html
@@ -39,13 +39,13 @@
 
 {% block postings %} {{ posts.advice }} {% endblock %}
 
-{% block if_block %}
+{% comment %}{% block if_block %}
     {% if posts.vote >= 50 %}
         <img src="{% static 'pictures/give him a cookie.png' %}" alt="uuughhhhhh"
              style="position: relative; float: right; max-width: 22%; max-height: 20rem; margin-left: 1rem;"
              class="img-fluid">
     {% endif %}
-{% endblock %}
+{% endblock %}{% endcomment %}
 
 
 {% block card_color %} bg-primary {% endblock %}
