--- a/templates/Base_All.html
+++ b/templates/Base_All.html
@@ -179,7 +179,7 @@
 </div>{% endcomment %}
 
 
-<nav class="navbar navbar-expand-lg navbar-light " style="background-color: rgba(29, 26, 26, 0.72);">
+<nav class="navbar navbar-expand-lg navbar-light navbar-reverse" style="background-color: rgba(29, 26, 26, 0.76);">
     {#  <a class="navbar-brand" href="#">Navbar</a>#}
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -208,7 +208,7 @@
 
 
 <div class="logo-it"
-     style="display: block; margin: auto; width: auto; text-align: center; padding-top: 1rem; background-color: white;">
+     style="display: block; margin: auto; width: auto; text-align: center; padding-top: 1rem;">
     {% block logo %}
         <a href="{% url 'secretes' %}" class="">
             <img src="{% static  'wall headers/wall Of Wisdom.png' %}" class="img-fluid" id="title_it"
