--- a/templates/Base_All.html
+++ b/templates/Base_All.html
@@ -92,13 +92,16 @@
 
     <style>
         body {
-            width: 100%;
-            height: 100%;
+            {#width: 100%;#}
+            {#height: 100%;#}
             background-image: url('{% static 'pictures/brick and blue.jpg' %}');
-            background-size: cover;
-            background-attachment: fixed;
-            margin: 0;
-            padding: 0;
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: center;
+            {#background-size: cover;#}
+            {#background-attachment: fixed;#}
+            {#margin: 0;#}
+            {#padding: 0;#}
         }
 
         @font-face {
